--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
       unityLoader.src = "Build/TelegramAppTest.loader.js";
       unityLoader.onload = () => {
         createUnityInstance(canvas, {
-          dataUrl: "Build/TelegramAppTest.data.br",
-          frameworkUrl: "Build/TelegramAppTest.framework.js.br",
-          codeUrl: "Build/TelegramAppTest.wasm.br",
+          dataUrl: "Build/TelegramAppTest.data.unityweb",
+          frameworkUrl: "Build/TelegramAppTest.framework.js.unityweb",
+          codeUrl: "Build/TelegramAppTest.wasm.unityweb",
           streamingAssetsUrl: "StreamingAssets",
           companyName: "DefaultCompany",
           productName: "CarWatcher",
