--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
 
 
       // Настраиваем лого во время загрузочного экрана
-      loading_logo.style.backgroundImage = "url('champlogo.png')";
+      loading_logo.style.empty;
 
       document.body.style.backgroundImage = "url('background.jpg')";
 
       // Настраиваем фон загрузочного экрана
-      loading_bg.style.backgroundColor = "linear-gradient(180deg, rgba(32,36,40,1) 0%, rgba(36,32,40,1) 47%, rgba(39,32,40,1) 100%)";
+      loading_bg.style.backgroundColor = "black";
 
       function setLoading(logoPositionTop, logoPositionLeft, logoWidth, logoHeight, positionTop, positionLeft, width, height, barColor, barFillColor, barBorder, barFillBorder, barBorderRadius, barFillBorderRadius, barBackgroundImage, barBackgroundSize) {
         // Указываем размер логотипа
